scss/layout.scss
@import "colors";

html, body {
    margin: 0;
}

.login {
    #header {
        height: 40vh;
    }

    form {
        input, button {
            border: 1px solid white;
            margin: 5px;
            padding: 5px;
        }

        button {
            margin-right: 0;
        }
    }
}

.main {
    height: 100vh;
    width: 100vw;
    overflow: hidden;

    .list {
        width: 30vw;
        height: 100vh;
        display: inline-block;
        overflow: hidden;
        overflow-y: auto;

        .room_radio {
            display: none;
        }

        label {
            height: 100px;
            width: 100%;
            cursor: pointer;
            display: block;

            img {
                margin: 10px;
                vertical-align: top;
            }

            #name {
                font-size: 140%;
                font-weight: bold;
                margin-top: 10px;
                display: inline-block;
            }
        }
    }

    .view {
        width: 69.8vw;
        height: 100vh;
        float: right;
        display: flex;
        min-height: 100vh;
        flex-direction: column;

        .messages {
            flex: 1;
            overflow-x: hidden;
            overflow-y: auto;
            .room_messages {
                display: none;
                height: 100%;

                .message {
                    clear: both;
                    margin: 5px;
                    padding: 8px;
                    position: relative;
                    display: inline-flex;
                    min-width: 110px;
                    max-width: 60%;
                    border-radius: 4px;
                    img {
                        height: 60px;
                        vertical-align: top;
                        margin: 5px;
                    }

                    div {
                        margin: 5px;
                        display: inline-block;
                        margin-bottom: 20px;
                    }

                    p {
                        margin: 0;
                        display: block;
                    }

                    .timestamp {
                        position: absolute;
                        right: 7px;
                        bottom: 7px;
                    }
                }
            }
        }

        .split {
            .in {
                float: left;
            }

            .out {
                float: right;
                img, b, br {
                    display: none;
                }
            }
        }

        .input {
            padding: 12px;
            position: relative;
            #file {
                cursor: pointer;
                height: 30px;
                position: absolute;
                bottom: 6px;
                left: 6px;
            }

            textarea {
                width: calc(100% - 72px);
                margin-left: 36px;
                border: none;
                background: transparent;

                resize: none;
                overflow: hidden;
                overflow-y: auto;
                outline: none;
                max-height: 150px;
            }

            #send {
                cursor: pointer;
                height: 30px;
                position: absolute;
                bottom: 6px;
                right: 6px;
            }
        }
    }
}

.no-select {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

